# sql-repair-env

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
frontend/src/: App.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ApiOpsTab.tsx  BaselineArenaTab.tsx  ProtocolTab.tsx  QueryWorkbenchTab.tsx  SectionCard.tsx  SqlLandingPage.tsx  SqlPreviewTable.tsx  TaskAtlasTab.tsx
frontend/src/data/: taskCatalog.ts
server/: __init__.py  app.py
sql_env/: __init__.py  env_core.py  grader.py  tasks.py
tests/: test_smoke.py
