[project]
name = "sql-repair-env"
version = "0.1.0"
description = "OpenEnv environment for SQL query repair tasks"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "krishpotanwar" }]
license = { text = "Apache-2.0" }
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "openai>=1.30.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["server", "sql_env"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.md"]
